# vegetable_price_forecast

./: LICENSE  README.md  pyproject.toml
environments/: Dockerfile  create_demand_env.sh
notebooks/: eda.ipynb
outputs/: sub_arima_pub-0.23171.csv  sub_holtwinters_pub-0.15503.csv  sub_prophet_non-tune.csv
src/: prophet_tune.py  seqs_utils.py  submit.py
