[tool.poetry]
name = "demand-forecasting"
version = "0.1.0"
description = ""
authors = ["gengen"]
readme = "README.md"
packages = [{include = "demand_forecasting"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
pmdarima = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
japanize-matplotlib = "^1.1.3"
prophet = "^1.1.4"
optuna = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
